--- a/app/src/main/res/layout/activity_capital.xml
+++ b/app/src/main/res/layout/activity_capital.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@mipmap/bg2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -13,22 +14,22 @@
             android:orientation="vertical">
 
             <net.tsz.afinal.view.TitleBar
+                android:id="@+id/title_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
                 app:center_tv="资金管理" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:background="@color/colorPrimary"
+                android:layout_height="90dp"
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/user_iv"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:layout_gravity="center"
                     android:layout_marginLeft="50dp"
-                    android:layout_marginTop="30dp"
                     android:src="@mipmap/ic_launcher" />
 
                 <LinearLayout
@@ -39,6 +40,7 @@
                     android:paddingLeft="10dp">
 
                     <TextView
+                        android:id="@+id/name_tv"
                         style="@style/capial_item_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -73,15 +75,26 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/white" />
+
             <android.support.design.widget.TabLayout
                 android:id="@+id/capital_tl"
                 android:layout_width="match_parent"
                 android:layout_height="40dp" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/white" />
+
             <android.support.v4.view.ViewPager
                 android:id="@+id/capital_vp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
         </LinearLayout>
-    </android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
 </layout>
