--- a/app/src/main/res/layout/activity_my_data.xml
+++ b/app/src/main/res/layout/activity_my_data.xml
@@ -16,9 +16,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="@color/blue"
-        android:padding="10dp">
+        android:orientation="horizontal"
+        android:padding="20dp">
+
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
@@ -30,41 +31,43 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:paddingLeft="10dp">
+            android:orientation="vertical">
 
             <TextView
                 style="@style/capial_item_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="123456" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingLeft="10dp">
-            <TextView
-                style="@style/capial_item_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:text="用户余额：" />
-            <TextView
-                style="@style/capial_item_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:textColor="@color/red"
-                android:text="88888" />
+                android:orientation="horizontal">
+
+                <TextView
+                    style="@style/capial_item_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:text="用户余额：" />
+
+                <TextView
+                    style="@style/capial_item_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:text="88888"
+                    android:textColor="@color/red" />
 
             </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -74,49 +77,60 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="账       号："/>
+            android:text="账       号：" />
+
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:layout_weight="1"
             android:gravity="right"
-            android:text="123456"/>
+            android:padding="10dp"
+            android:text="123456" />
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:background="@color/white"
         android:padding="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="真实姓名："/>
+            android:text="真实姓名：" />
+
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:layout_weight="1"
             android:gravity="right"
-            android:text="123456"/>
+            android:padding="10dp"
+            android:text="123456" />
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:background="@color/white"
         android:padding="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="币       别："/>
+            android:text="币       别：" />
+
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:layout_weight="1"
             android:gravity="right"
-            android:text="RMB"/>
+            android:padding="10dp"
+            android:text="RMB" />
+
     </LinearLayout>
+
 </LinearLayout>
