登录首页固定数据对接

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,6 +15,7 @@
             android:orientation="vertical">
 
             <net.tsz.afinal.view.TitleBar
+                android:id="@+id/title_bars"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
