--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="black">#000</color>
     <color name="dihui">#EFF0F0</color>
     <color name="mihuang">#FFC680</color>
+    <color name="common_bg_color">#F2F2FD</color>
+    <color name="press_btn_color">#ddd</color>
 </resources>
