--- a/app/src/main/res/layout/item_left.xml
+++ b/app/src/main/res/layout/item_left.xml
@@ -4,19 +4,20 @@
     android:layout_height="35dp"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv"
-        android:layout_width="5dp"
-        android:layout_height="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:src="@mipmap/num_1" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="阿萨德"
         android:textSize="18sp" />
+
+    <View
+        android:id="@+id/iv"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_margin="5dp"
+        android:background="@color/red"
+        android:visibility="gone" />
 </RelativeLayout>
